[gd_scene load_steps=40 format=3 uid="uid://dbhtrssgng58f"]

[ext_resource type="Script" uid="uid://bwkkatjpy72kv" path="res://entity/player/player.gd" id="1_b15sj"]
[ext_resource type="Texture2D" uid="uid://e7rr31b6fwkg" path="res://entity/player/art/player.png" id="2_e6ar1"]
[ext_resource type="Script" uid="uid://cbkom3y372wt7" path="res://common/component/melee_attack/melee_attack.gd" id="3_5afgs"]
[ext_resource type="PackedScene" uid="uid://b1ju0utxkl773" path="res://common/component/soft_collision/soft_collision.tscn" id="3_b15sj"]
[ext_resource type="PackedScene" uid="uid://do052sqt3wjdp" path="res://common/component/detectbox/detectbox.tscn" id="3_n81ss"]
[ext_resource type="AnimationNodeBlendTree" uid="uid://bam4152vw8gtf" path="res://entity/player/data/player_animation_tree.tres" id="3_qa8rf"]
[ext_resource type="Script" uid="uid://dby4p11qhtin7" path="res://common/component/hurtbox/hurtbox.gd" id="3_wltfy"]
[ext_resource type="Script" uid="uid://3lp7jvr6ovc2" path="res://common/resource/attack/attack_data.gd" id="4_ivlxb"]
[ext_resource type="Script" uid="uid://b6r7vut6vta3w" path="res://entity/player/state/player_idle_state.gd" id="6_2iqu4"]
[ext_resource type="Script" uid="uid://lnjp761bf75g" path="res://common/component/movement/base_movement.gd" id="8_mx88g"]
[ext_resource type="Script" uid="uid://bu436ru5hhd66" path="res://common/component/animation/base_animation.gd" id="9_b15sj"]
[ext_resource type="Script" uid="uid://b2efdribe7jd0" path="res://entity/player/player_input.gd" id="9_mx88g"]
[ext_resource type="Script" uid="uid://jtqne3plv0gg" path="res://entity/player/state/player_roll_state.gd" id="9_t2ln0"]
[ext_resource type="Script" uid="uid://lsk26m6ixhqu" path="res://common/state_machinie/state_machine.gd" id="11_b15sj"]
[ext_resource type="Script" uid="uid://chearh86c82uf" path="res://entity/player/state/player_attack_state.gd" id="11_klmji"]
[ext_resource type="Script" uid="uid://csp44dwfwcqu0" path="res://entity/player/state/player_move_state.gd" id="14_b15sj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nqnt1"]
radius = 3.0
height = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mx88g"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n81ss"]
radius = 25.0

[sub_resource type="Resource" id="Resource_ivlxb"]
script = ExtResource("4_ivlxb")
base_damage = 1.0
knockback_force = 50.0
element_type = "Normal"
metadata/_custom_type_script = "uid://3lp7jvr6ovc2"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_klmji"]

[sub_resource type="Animation" id="Animation_mx88g"]
resource_name = "AttackDown"
length = 0.5
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 18]
}

[sub_resource type="Animation" id="Animation_o1dj4"]
resource_name = "AttackLeft"
length = 0.5
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 12]
}

[sub_resource type="Animation" id="Animation_s67sq"]
resource_name = "AttackRight"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 0]
}

[sub_resource type="Animation" id="Animation_vts37"]
resource_name = "AttackUp"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 6]
}

[sub_resource type="Animation" id="Animation_4btn6"]
resource_name = "IdleDown"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_2iqu4"]
resource_name = "IdleLeft"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_bgq54"]
resource_name = "IdleRight"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wjhpj"]
resource_name = "IdleUp"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_wltfy"]
resource_name = "MoveDown"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22, 23, 18]
}

[sub_resource type="Animation" id="Animation_klmji"]
resource_name = "MoveLeft"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 12]
}

[sub_resource type="Animation" id="Animation_t2ln0"]
resource_name = "MoveRight"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 0]
}

[sub_resource type="Animation" id="Animation_qa8rf"]
resource_name = "MoveUp"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 6]
}

[sub_resource type="Animation" id="Animation_482rp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5afgs"]
resource_name = "RollDown"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [55, 56, 57, 58, 59, 18]
}

[sub_resource type="Animation" id="Animation_n81ss"]
resource_name = "RollLeft"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54, 12]
}

[sub_resource type="Animation" id="Animation_b15sj"]
resource_name = "RollRight"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 0]
}

[sub_resource type="Animation" id="Animation_ivlxb"]
resource_name = "RollUp"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [45, 46, 47, 48, 49, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5afgs"]
_data = {
&"AttackDown": SubResource("Animation_mx88g"),
&"AttackLeft": SubResource("Animation_o1dj4"),
&"AttackRight": SubResource("Animation_s67sq"),
&"AttackUp": SubResource("Animation_vts37"),
&"IdleDown": SubResource("Animation_4btn6"),
&"IdleLeft": SubResource("Animation_2iqu4"),
&"IdleRight": SubResource("Animation_bgq54"),
&"IdleUp": SubResource("Animation_wjhpj"),
&"MoveDown": SubResource("Animation_wltfy"),
&"MoveLeft": SubResource("Animation_klmji"),
&"MoveRight": SubResource("Animation_t2ln0"),
&"MoveUp": SubResource("Animation_qa8rf"),
&"RESET": SubResource("Animation_482rp"),
&"RollDown": SubResource("Animation_5afgs"),
&"RollLeft": SubResource("Animation_n81ss"),
&"RollRight": SubResource("Animation_b15sj"),
&"RollUp": SubResource("Animation_ivlxb")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 4
motion_mode = 1
script = ExtResource("1_b15sj")

[node name="Skin" type="Sprite2D" parent="."]
texture = ExtResource("2_e6ar1")
offset = Vector2(0, -10)
hframes = 60

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_nqnt1")

[node name="SoftCollision" parent="." instance=ExtResource("3_b15sj")]
collision_layer = 512
push_force = 50000.0
push_distance = 500.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftCollision"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_mx88g")
debug_color = Color(0, 0.631373, 0.478431, 0.235294)

[node name="AutoAttackDetectbox" parent="." instance=ExtResource("3_n81ss")]
position = Vector2(0, -5)
collision_layer = 0
collision_mask = 2
radius = 25.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AutoAttackDetectbox"]
shape = SubResource("CircleShape2D_n81ss")
debug_color = Color(0.631373, 0.517647, 0.301961, 0.235294)

[node name="MeleeAttack" type="Node2D" parent="."]
position = Vector2(0, -5)
script = ExtResource("3_5afgs")
attack_cooldown = 0.1

[node name="Hurtbox" type="Area2D" parent="MeleeAttack"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("3_wltfy")
attack_data = SubResource("Resource_ivlxb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeAttack/Hurtbox"]
position = Vector2(-15, 0)
shape = SubResource("CapsuleShape2D_klmji")
debug_color = Color(0.901961, 0.243137, 0.501961, 0.235294)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 20.0
debug_use_custom = true
debug_path_custom_color = Color(1, 0, 1, 1)

[node name="PlayerMovement" type="Node" parent="."]
script = ExtResource("8_mx88g")

[node name="PlayerAnimation" type="Node" parent="." node_paths=PackedStringArray("animation_tree")]
script = ExtResource("9_b15sj")
animation_tree = NodePath("AnimationTree")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerAnimation"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_5afgs")
}

[node name="AnimationTree" type="AnimationTree" parent="PlayerAnimation"]
root_node = NodePath("../..")
tree_root = ExtResource("3_qa8rf")
anim_player = NodePath("../AnimationPlayer")
parameters/StateMachine/Attack/blend_position = Vector2(0, 0)
parameters/StateMachine/Idle/blend_position = Vector2(0, 0)
parameters/StateMachine/Move/blend_position = Vector2(0, 0)
parameters/StateMachine/Roll/blend_position = Vector2(0, 0)
parameters/TimeScale/scale = 1.0

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource("9_mx88g")

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("11_b15sj")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_2iqu4")
animation_state = "Idle"

[node name="Move" type="Node" parent="PlayerStateMachine"]
script = ExtResource("14_b15sj")
animation_state = "Move"

[node name="Roll" type="Node" parent="PlayerStateMachine"]
script = ExtResource("9_t2ln0")
animation_state = "Roll"

[node name="Attack" type="Node" parent="PlayerStateMachine"]
script = ExtResource("11_klmji")
animation_state = "Attack"
